force-app/main/default/objects/ContentVersion/fields/Added_to_Paper_Bill_Queue__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Paper_Bill_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked true after ContentMailerScheduler mails this document via LetterStream</inlineHelpText>
    <label>Added to Paper Bill Queue</label>
    <type>Checkbox</type>
</CustomField>