force-app/main/default/objects/ContentVersion/fields/File_Category__c.field-meta.xml
<CustomField>
    <fullName>File_Category__c</fullName>
    <inlineHelpText>Currently used to determine what files are moved from Lead to Opp for Switch contracts, and sent for DS Signature</inlineHelpText>
    <label>File Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Disclosure Form</fullName>
            </value>
            <value>
                <fullName>Partial Customer Agreement Packet</fullName>
            </value>
            <value>
                <fullName>Full Customer Agreement Packet</fullName>
            </value>
            <value>
                <fullName>Customer Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Utility Bill</fullName>
            </value>
            <value>
                <fullName>Transfer Sheet</fullName>
            </value>
            <value>
                <fullName>Financial Review Documents</fullName>
            </value>
            <value>
                <fullName>Customer Bill</fullName>
                <isActive>false</isActive>
                <label>Customer Bill</label>
            </value>
            <value>
                <fullName>Customer Contract</fullName>
                <isActive>false</isActive>
                <label>Customer Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>