force-app/main/default/objects/ContentVersion/fields/LetterStreamJob__c.field-meta.xml
<CustomField>
    <fullName>LetterStreamJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LetterStreamJob</label>
    <referenceTo>LetterStreamJob__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>