force-app/main/default/objects/ContentVersion/fields/Mail_Type__c.field-meta.xml
<CustomField>
    <fullName>Mail_Type__c</fullName>
    <inlineHelpText>The type of document/mail piece per LetterStream documentation</inlineHelpText>
    <label>Mail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>firstclass</fullName>
            </value>
            <value>
                <fullName>firstclass_hse</fullName>
            </value>
            <value>
                <fullName>certified</fullName>
            </value>
            <value>
                <fullName>certnoerr</fullName>
            </value>
            <value>
                <fullName>postcard</fullName>
            </value>
            <value>
                <fullName>flat</fullName>
            </value>
            <value>
                <fullName>propostcard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>