force-app/main/default/objects/ContentVersion/fields/Ready_for_Paper_Bill_Queue__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Paper_Bill_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true to have the ContentMailerScheduler mail this pdf via LetterStream</inlineHelpText>
    <label>Ready for Paper Bill Queue</label>
    <type>Checkbox</type>
</CustomField>