force-app/main/default/objects/ContentVersion/fields/Signing_Status__c.field-meta.xml
<CustomField>
    <fullName>Signing_Status__c</fullName>
    <inlineHelpText>Set by Conga and ContractMigrationService to allow ClientFileCopierService to only copy Countersigned documents</inlineHelpText>
    <label>Signing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Countersigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>